css/style.css
/* ... */
.modMilestone strong {
  font-size: 3.42857rem;
  display: block;
  margin-bottom: 30px;
}
.modMilestone span {
  letter-spacing: 1px;
  text-transform: uppercase;
}

.modMilestone.no-icon {
  padding: 30px 0 10px;
}
.modMilestone.no-icon strong {
  font-size: 4.28571rem;
}
.modPriceBox {
  border: 1px solid #e0e0e0;
  padding: 0 15px 15px;
  margin: 0 0 60px;
  background-color: #fff;
  text-align: center;
}
.modPriceBox ul {
  margin-left: 0;
  list-style: none;
}
.modPriceBox .info {
  border-top: 4px solid #bbb;
  padding: 20px 0 0;
}
.modPriceBox li {
  background: #eee;
  color: #999;
}
.modPriceBox li.even {
  background: #f7f7f7;
}
.modPriceBox p.level {
  font-size: 18px;
  font-weight: bold;
  text-transform: uppercase;
  margin: 0 0 5px;
}
.modPriceBox p.desc {
  font-size: 14px;
  margin-bottom: 20px;
  color: #999;
}
.modPriceBox p.price {
  font-size: 16px;
  color: #666;
  font-style: italic;
  border-bottom: 1px solid #d0d0d0;
  margin: 0;
  padding-bottom: 10px;
}
.modPriceBox p.price .dollar {
  font-size: 30px;
  color: #333;
  font-style: normal;
  position: relative;
  top: -30px;
}
.modPriceBox p.price .number {
  font-size: 70px;
  color: #333;
  font-style: normal;
}
.modPriceBox .features {
  margin: 0 0 30px;
}
.modPriceBox .features li {
  padding: 5px 0;
}
.modPriceBox p.start {
  margin: 0;
}

.modPriceBox.featured .info {
  border-top: 4px solid #EF5350;
}

.modPriceBox:hover {
  background-color: rgba(255, 255, 255, 0.7);
}
.modSectionHeader .special-title h2 {
  text-transform: uppercase;
  display: inline-block;
}
.modSectionHeader .special-title h2::after {
  content: "";
  width: 66%;
  margin: 0 auto;
  height: 2px;
  background: #E53935;
  display: block;
}

.modSectionHeader.big h2 {
  font-size: 4rem;
}
.modSectionHeader.big h3 {
  font-weight: normal;
  letter-spacing: 3px;
}

.modSectionHeader.alt h2 {
  font-size: 1.5rem;
  letter-spacing: 4px;
}
.modSectionHeader.alt h2::after {
  content: "";
  width: 50px;
  margin: 8px auto 20px;
  height: 3px;
  background: currentColor;
  display: block;
}
.modTeamMember .member {
  position: relative;
  overflow: hidden;
  margin-bottom: 20px;
}
.modTeamMember ul {
  margin: 0;
}
.modTeamMember ul li {
  list-style: none;
  display: inline-block;
  margin-right: 8px;
}
.modTeamMember ul i {
  width: 36px;
  height: 36px;
  -moz-border-radius: 18px;
  -webkit-border-radius: 18px;
  border-radius: 18px;
  background: #D50000;
  color: #fff;
  text-align: center;
  font-size: 1.125rem;
  line-height: 2.5rem;
}
.modTeamMember img {
  width: 100%;
}
.modTeamMember .overlay {
  opacity: 0;
  background-color: rgba(255, 255, 255, 0.9);
  text-align: center;
  vertical-align: middle;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 100%;
}
.modTeamMember .overlay .intro {
  position: relative;
  top: 50%;
  margin-top: -60px;
}
.modTeamMember .overlay h3 {
  margin-bottom: 10px;
}
.modTeamMember .overlay p {
  font-style: italic;
  margin-bottom: 30px;
}
.modTeamMember .member:hover .overlay {
  opacity: 1;
  -moz-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  top: 0;
}

.modTeamMember.style-2 h3 {
  margin-bottom: 0;
}
.modTeamMember.style-2 p.position {
  text-transform: uppercase;
  letter-spacing: 3px;
  font-size: 0.8rem;
}
.modTeamMember.style-2 .overlay {
  background-color: rgba(255, 255, 255, 0.7);
}
.modTeamMember.style-2 .overlay ul.socials {
  position: relative;
  top: 50%;
  margin-top: -18px;
}

/* Slider */
.slick-slider {
  position: relative;
  display: block;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -ms-touch-action: pan-y;
  touch-action: pan-y;
  -webkit-tap-highlight-color: transparent;
}

.slick-list {
  position: relative;
  overflow: hidden;
  display: block;
  margin: 0;
  padding: 0;
}
.slick-list:focus {
  outline: none;
}
.slick-loading .slick-list {
  background: #fff;
}
.slick-list.dragging {
  cursor: pointer;
  cursor: hand;
}

.slick-slider .slick-track {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  -o-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

.slick-track {
  position: relative;
  left: 0;
  top: 0;
  display: block;
}
.slick-track:before, .slick-track:after {
  content: "";
  display: table;
}
.slick-track:after {
  clear: both;
}
.slick-loading .slick-track {
  visibility: hidden;
}

.slick-slide {
  float: left;
  height: 100%;
  min-height: 1px;
  display: none;
}
[dir="rtl"] .slick-slide {
  float: right;
}
.slick-slide img {
  display: block;
}
.slick-slide.slick-loading img {
  display: none;
}
.slick-slide.dragging img {
  pointer-events: none;
}
.slick-initialized .slick-slide {
  display: block;
}
.slick-loading .slick-slide {
  visibility: hidden;
}
.slick-vertical .slick-slide {
  display: block;
  height: auto;
  border: 1px solid transparent;
}

/* Icons */
/* Arrows */
.slick-prev,
.slick-next {
  position: absolute;
  display: block;
  height: 20px;
  width: 20px;
  line-height: 0;
  font-size: 0;
  cursor: pointer;
  background: transparent;
  color: transparent;
  top: 50%;
  margin-top: -10px;
  padding: 0;
  border: none;
  outline: none;
}
.slick-prev:hover, .slick-prev:focus,
.slick-next:hover,
.slick-next:focus {
  outline: none;
  background: transparent;
  color: transparent;
}
.slick-prev:hover:before, .slick-prev:focus:before,
.slick-next:hover:before,
.slick-next:focus:before {
  opacity: 1;
}
.slick-prev.slick-disabled:before,
.slick-next.slick-disabled:before {
  opacity: 0.25;
}
/* ... */

